--- a/astro_2.0/features/ViewBounty/components/ClaimsInfo/ClaimsInfo.module.scss
+++ b/astro_2.0/features/ViewBounty/components/ClaimsInfo/ClaimsInfo.module.scss
@@ -12,7 +12,9 @@
 }
 
 .column {
-  margin-right: 24px;
+  @include tablet-landscape {
+    margin-right: 24px;
+  }
 }
 
 .noResults {
