--- a/astro_2.0/features/ViewBounty/components/ClaimsStatistic/ClaimsStatistic.module.scss
+++ b/astro_2.0/features/ViewBounty/components/ClaimsStatistic/ClaimsStatistic.module.scss
@@ -4,13 +4,9 @@
   background: var(--color-white);
   border: 1px solid var(--color-neutral-40);
   border-radius: 8px;
-  display: none;
+  display: flex;
   flex-wrap: wrap;
   width: 100%;
-
-  @include tablet-landscape {
-    display: flex;
-  }
 }
 
 .chart {
